--- a/key/keyext.tadoc/src/main/resources/static/style.css
+++ b/key/keyext.tadoc/src/main/resources/static/style.css
@@ -1163,3 +1163,13 @@ h3 {
     font-style: italic;
 }
 
+
+.markdown {
+    padding-left: 1em;
+    border-left: 4px #129fea solid;
+}
+
+.symbol.sort { color: #5aba59;}
+.symbol.function { color: #129fea;}
+.symbol.predicate { color: #8156a7;}
+.symbol.transformer { color: #d65d0e; }
